--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # User
 .DS_Store
 FlaskApp/dev
+FlaskApp/pwd.json
+FlaskApp/running.json
+FlaskApp/static/style.json
 FlaskApp/static/exp
 FlaskApp/static/audio/1*
 gustav/user_scripts/_*
